--- a/css-basics/css-basics_button-styles/css/styles.css
+++ b/css-basics/css-basics_button-styles/css/styles.css
@@ -30,18 +30,25 @@ button {
 /* Add your CSS styles below this line. Feel free to replace the comments with your code. Make sure not to put your code into the comments, because then nothing will happen. */
 
 .button1 {
+  border-radius: 10px;
   /*Style me! Change my border, set a border radius or what you want to try out. :) */
 }
 
 .button2 {
+  background-color: darkblue;
+  color: lightblue;
   /*Style me! Change my color, or my background-color. Or both! You can test out different color modes here - like HEX, RGB, ... */
 }
 
 .button3 {
+  font-family: "Courier New", Courier, monospace;
+  font-style: italic;
   /*Style me! You can test out changing the font, or font size, ...*/
 }
 
 .button4 {
+  box-shadow: 0px 5px 5px rgb(8, 4, 255);
+  border-radius: 5px;
   /*Style me! Can you add a shadow to this button? Maybe play around with the shadow properties, as well? You can even color the shadow, make it bigger or smaller, ... */
 }
 
