--- a/css-positioning/css-positioning_layout-with-position/css/styles.css
+++ b/css-positioning/css-positioning_layout-with-position/css/styles.css
@@ -22,6 +22,11 @@ body {
   height: 80px;
   box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
   padding: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
 }
 
 .header__text {
@@ -41,6 +46,10 @@ body {
   background: #140523;
   color: #ffffff;
   height: 48px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 /**
@@ -53,6 +62,7 @@ body {
   padding: 3% 10%;
   scroll-margin-top: 100px;
   border-radius: 2rem;
+  position: relative;
 }
 
 .card__heading {
@@ -68,6 +78,9 @@ body {
   padding: 6px 12px;
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 /**
@@ -87,4 +100,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: sticky;
+  bottom: 0;
+  z-index: 10;
 }
