--- a/css-structures/css-structure_custom-properties/css/styles.css
+++ b/css-structures/css-structure_custom-properties/css/styles.css
@@ -4,6 +4,15 @@
   box-sizing: border-box;
 }
 
+:root {
+  --color-granite: #252629;
+  --color-nemo: #ffa500;
+  --color-foam: #ffffff;
+  --border-radius-small: 4px;
+  --letter-spacing-small: 0.025em;
+  --display-flex: flex;
+}
+
 body {
   margin: 0;
   font-family: system-ui;
@@ -11,29 +20,29 @@ body {
 }
 
 header {
-  background: rgb(37 38 41 / 100%);
+  background-color: var(--color-granite);
 }
 
 h1 {
   text-align: center;
-  color: white;
+  color: var(--color-foam);
   line-height: 1.4;
   margin: 0;
-  letter-spacing: 0.025em;
+  letter-spacing: var(--letter-spacing-small);
   text-transform: uppercase;
   padding-block: 16px;
 }
 
 h2 {
-  letter-spacing: 0.025em;
+  letter-spacing: var(--letter-spacing-small);
 }
 
 strong {
-  color: #ff4a11;
+  color: var(--color-nemo);
 }
 
 section {
-  display: flex;
+  display: var(--display-flex);
   flex-wrap: wrap;
   gap: 32px;
   padding: 16px;
@@ -52,21 +61,21 @@ img {
 
 figure {
   width: min(100%, 400px);
-  display: flex;
+  display: var(--display-flex);
   flex-direction: column;
   gap: 10px;
   margin: 0;
   padding: 10px;
-  background-color: #ff4a11ff;
+  background-color: var(--color-nemo);
   border-radius: 4px;
 }
 
 figcaption {
-  color: rgb(255 255 255);
+  color: var(--color-foam);
 }
 
 nav {
-  display: flex;
+  display: var(--display-flex);
   flex-wrap: wrap;
   gap: 8px 16px;
 }
@@ -76,24 +85,24 @@ a {
   font-size: smaller;
   padding: 8px;
   border-radius: 4px;
-  background-color: hsl(14 100% 53%);
-  color: #fff;
+  background-color: var(--color-nemo);
+  color: var(--color-foam);
 }
 
 a:hover,
 a:focus-visible {
-  background-color: rgb(37 38 41);
+  background-color: var(--color-granite);
   text-decoration: none;
 }
 
 mark {
-  background-color: rgb(255 74 17);
-  color: #ffffff;
+  background-color: var(--color-nemo);
+  color: var(--color-foam);
   border-radius: 4px;
-  letter-spacing: 0.025em;
+  letter-spacing: var(--letter-spacing-small);
 }
 
 ::selection {
-  background-color: #252629;
-  color: #ff4a11;
+  background-color: var(--color-granite);
+  color: var(--color-nemo);
 }
