--- a/html/html-and-the-web_personal-website/styles.css
+++ b/html/html-and-the-web_personal-website/styles.css
@@ -7,8 +7,15 @@ body {
   background-color: #f5f5f5;
 }
 
-h4 {
-  font-weight: 400;
+a {
+  font-weight: 300;
+  color: #f5f5f5;
+  text-decoration: none;
+}
+
+a:hover {
+  font-style: italic;
+  color: orange;
 }
 
 footer {
