--- a/css-grid/css-grid_payment-cards/css/styles.css
+++ b/css-grid/css-grid_payment-cards/css/styles.css
@@ -49,3 +49,9 @@ body {
   font-size: 2.5rem;
   font-weight: bold;
 }
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 25px;
+}
