--- a/JS/js-loops/js-loops_forin-select-nav/css/styles.css
+++ b/JS/js-loops/js-loops_forin-select-nav/css/styles.css
@@ -14,3 +14,16 @@ main {
   gap: 0.5em;
   padding: 20px;
 }
+
+ul {
+  display: flex;
+  gap: 0.5em;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  color: black;
+}
